gcc/testsuite/gm2/pim/fail/cyclictypes.mod
MODULE cyclictypes ;

TYPE
   A = B;
   B = A;

PROCEDURE foo ;
VAR
   bar: A ;
END foo ;


END cyclictypes.
